// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyDetailsPage > should match snapshot (API) > full state 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            public-key-name
          </h1>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            download
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            aria-haspopup="true"
            aria-label="iconButtonAriaLabel"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-11ghgbe-MuiButtonBase-root-MuiIconButton-root"
            id=":r1:-composition-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
              data-testid="MoreVertIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
            >
              <div
                class="css-nen11g-MuiStack-root"
              >
                <h2
                  class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
                >
                  title
                </h2>
              </div>
              <div
                class="MuiBox-root css-1yuhvjn"
              >
                <div
                  class="MuiStack-root css-1p5q5e5-MuiStack-root"
                >
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        creationDateField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        28 febbraio 2023
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        uploaderField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        Mario Rossi
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        kidField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        Fxod41P3BZoe2HT6BuEw3SNFlu9ufAkYgpmtBoNuVkg
                        <button
                          aria-label="Copia"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          role="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                            data-testid="ContentCopyIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        clientIdField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        clientId
                        <button
                          aria-label="Copia"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          role="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                            data-testid="ContentCopyIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-fhd9dx-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            options="[object Object]"
            tabindex="0"
            type="button"
          >
            backToKeyListBtn
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`KeyDetailsPage > should match snapshot (API) > loading state 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
            />
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-u9n5y4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
            />
          </p>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
              style="height: 227px;"
            />
          </div>
        </div>
        <div
          class="css-fhd9dx-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            options="[object Object]"
            tabindex="0"
            type="button"
          >
            backToKeyListBtn
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`KeyDetailsPage > should match snapshot (CONSUMER) > full state 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            public-key-name
          </h1>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            download
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            aria-haspopup="true"
            aria-label="iconButtonAriaLabel"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-11ghgbe-MuiButtonBase-root-MuiIconButton-root"
            id=":r5:-composition-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
              data-testid="MoreVertIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
            >
              <div
                class="css-nen11g-MuiStack-root"
              >
                <h2
                  class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
                >
                  title
                </h2>
              </div>
              <div
                class="MuiBox-root css-1yuhvjn"
              >
                <div
                  class="MuiStack-root css-1p5q5e5-MuiStack-root"
                >
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        creationDateField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        28 febbraio 2023
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        uploaderField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        Mario Rossi
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        kidField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        Fxod41P3BZoe2HT6BuEw3SNFlu9ufAkYgpmtBoNuVkg
                        <button
                          aria-label="Copia"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          role="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                            data-testid="ContentCopyIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        clientIdField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        clientId
                        <button
                          aria-label="Copia"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          role="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                            data-testid="ContentCopyIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-fhd9dx-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            options="[object Object]"
            tabindex="0"
            type="button"
          >
            backToKeyListBtn
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`KeyDetailsPage > should match snapshot (CONSUMER) > loading state 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="css-1mure3k-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1rr4qq7"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          >
            public-key-name
          </h1>
        </div>
        <div
          class="css-1yo1jo6-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            download
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            aria-haspopup="true"
            aria-label="iconButtonAriaLabel"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-11ghgbe-MuiButtonBase-root-MuiIconButton-root"
            id=":r5:-composition-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
              data-testid="MoreVertIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-h5fkc8"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
            >
              <div
                class="css-nen11g-MuiStack-root"
              >
                <h2
                  class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
                >
                  title
                </h2>
              </div>
              <div
                class="MuiBox-root css-1yuhvjn"
              >
                <div
                  class="MuiStack-root css-1p5q5e5-MuiStack-root"
                >
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        creationDateField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        28 febbraio 2023
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        uploaderField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        Mario Rossi
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        kidField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        Fxod41P3BZoe2HT6BuEw3SNFlu9ufAkYgpmtBoNuVkg
                        <button
                          aria-label="Copia"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          role="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                            data-testid="ContentCopyIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </p>
                    </div>
                  </div>
                  <div
                    class="css-19qjufr-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-iuqs4u"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                      >
                        clientIdField.label
                      </p>
                    </div>
                    <div
                      class="MuiBox-root css-1rr4qq7"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                      >
                        clientId
                        <button
                          aria-label="Copia"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
                          data-mui-internal-clone-element="true"
                          role="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                            data-testid="ContentCopyIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-fhd9dx-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            options="[object Object]"
            tabindex="0"
            type="button"
          >
            backToKeyListBtn
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
